--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <p> Hello, I'm Amjad Hamidi, 
     a forth-year student majoring in Computer Engineering at Kadoorie University.
      I'm now learning HTML.</p>
+     <br>
+     <p>Follow me here on LinkedIn :<a href="https://www.linkedin.com/in/amjad-hamidi/">Amjad Hamidi</a></p>
+     <br> 
     <img 
     src="img/Amjad.png"
     width="200px"
