--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <p> Hello, I'm Amjad Hamidi, 
     a forth-year student majoring in Computer Engineering at Kadoorie University.
-     I'm now learning HTML.</p>
-     <br>
-     <p>Follow me here on LinkedIn :<a href="https://www.linkedin.com/in/amjad-hamidi/">Amjad Hamidi</a></p>
+     My skills are in Backend Development (ASP.NET), Database, C#, Python, C++, Data Structures,Algorithms,Computer Networks, Java, object-oriented programming and many others.
+     I aspire to learn constantly every day,
+     I now want to continue my learning in Frontend Development and work on many projects
+     Which you will find on my LinkedIn account. <br><br>
+     If you want to see my work , Follow me on LinkedIn : <a href="https://www.linkedin.com/in/amjad-hamidi/">Amjad Hamidi</a></p>
      <br> 
     <img 
     src="img/Amjad.png"
-    width="200px"
-    height="200px"
+    width="550px"
+    height="500px"
     alt="Amjad Hamidi"
     title="Amjad Hamidi-4th year student CE at PTUK"
       />
